Modul Simpelbi: Get data all admin

--- a/users/users-admin.html
+++ b/users/users-admin.html
@@ -727,8 +727,7 @@
                                        </th>
                                     </tr>
                                  </thead>
-                                 <tbody id="adminTableBody">
-                                    <script src="users-admin.js" type="module"></script>
+                                 <tbody >
                                  </tbody>
                               </table>
                            </div>
@@ -832,6 +831,8 @@
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
    <!-- endinject-->
+   <script src="users-admin.js" type="module"></script>
+
 </body>
 
 </html>
