modul Simpelbi: Memperbaiki getFunction

--- a/users/users-admin.html
+++ b/users/users-admin.html
@@ -155,7 +155,7 @@
                               </li>
                               <li class="author-online has-new-message">
                                  <div class="user-avater">
-                                    <img src="../imgteam-1.png" alt="">
+                                    <!-- <img src="../imgteam-1.png" alt=""> -->
                                  </div>
                                  <div class="user-message">
                                     <p>
@@ -172,7 +172,7 @@
                               </li>
                               <li class="author-offline">
                                  <div class="user-avater">
-                                    <img src="../imgteam-1.png" alt="">
+                                    <!-- <img src="../imgteam-1.png" alt=""> -->
                                  </div>
                                  <div class="user-message">
                                     <p>
@@ -188,7 +188,7 @@
                               </li>
                               <li class="author-offline">
                                  <div class="user-avater">
-                                    <img src="../imgteam-1.png" alt="">
+                                    <!-- <img src="../imgteam-1.png" alt=""> -->
                                  </div>
                                  <div class="user-message">
                                     <p>
@@ -363,21 +363,7 @@
                   </div>
                </li>
                <!-- ends: .nav-support -->
-               <li class="nav-flag-select">
-                  <div class="dropdown-custom">
-                     <a href="javascript:;" class="nav-item-toggle"><img src="../imgflag.png" alt="" class="rounded-circle"></a>
-                     <div class="dropdown-parent-wrapper">
-                        <div class="dropdown-wrapper dropdown-wrapper--small">
-                           <a href=""><img src="../imgeng.png" alt=""> English</a>
-                           <a href=""><img src="../imgger.png" alt=""> German</a>
-                           <a href=""><img src="../imgspa.png" alt=""> Spanish</a>
-                           <a href=""><img src="../imgtur.png" alt=""> Turkish</a>
-                           <a href=""><img src="../imgiraq.png" alt=""> Arabic</a>
-                        </div>
-                     </div>
-
-                  </div>
-               </li>
+               
                <!-- ends: .nav-flag-select -->
                <li class="nav-author">
                   <div class="dropdown-custom">
