Modul Simpelbi: Memperbarui getfunc simpel

--- a/users/users-admin.html
+++ b/users/users-admin.html
@@ -54,7 +54,8 @@
 
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-
+<style>
+ </style>
 </head>
 
 <body class="layout-light side-menu">
@@ -687,7 +688,8 @@
                                  </div>
                               </div>
                               <div id="filter-form-container"></div>
-                              <table class="table mb-0 table-borderless adv-table" data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
+                              
+                              <table  class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="4">
                                  <thead>
                                     <tr class="userDatatable-header">
                                        <th>
@@ -713,7 +715,14 @@
                                        </th>
                                     </tr>
                                  </thead>
-                                 <tbody >
+                                 <tbody id="tableBody">
+                                    <tr>
+                                       <td colspan="7">
+                                         <div class="spinner"></div>
+                                         <!-- <div id="agGrid" class="ag-theme-alpine" style="width: 100%; height: 400px;"></div> -->
+
+                                       </td>
+                                     </tr>
                                  </tbody>
                               </table>
                            </div>
@@ -732,7 +741,7 @@
                <div class="row">
                   <div class="col-md-6">
                      <div class="footer-copyright">
-                        <p><span>© 2023</span><a href="#">Sovware</a>
+                        <p><span>© 2023</span><a href="#"></a>
                         </p>
                      </div>
                   </div>
@@ -769,8 +778,17 @@
    </div>
    <div class="overlay-dark-sidebar"></div>
    <div class="customizer-overlay"></div>
-   <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script>
-   <!-- inject:js-->
+   <!-- <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script> -->
+   <!-- inject:js -->
+    <script src="https://cdn.jsdelivr.net/npm/ag-grid-community/dist/ag-grid-community.min.noStyle.js"></script>
+    <!-- Include the core CSS, this is needed by the grid -->
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-grid.css"/>
+    <!-- Include the theme CSS, only need to import the theme you are going to use -->
+    <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-theme-alpine.css"/>
+
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    <script src="../assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
    <script src="../assets/vendor_assets/js/jquery/jquery-ui.js"></script>
    <script src="../assets/vendor_assets/js/bootstrap/popper.js"></script>
