Modul Simpelbi: Fix get untuk admin dan fakultas

--- a/users/users-admin.html
+++ b/users/users-admin.html
@@ -687,7 +687,7 @@
                                  <thead>
                                     <tr class="userDatatable-header">
                                        <th>
-                                          <span class="userDatatable-title">Id</span>
+                                          <span class="userDatatable-title">No</span>
                                        </th>
                                        <th>
                                           <span class="userDatatable-title">Nama</span>
