Insert Data KTS untuk menu KTS Admin

--- a/ami/kts.html
+++ b/ami/kts.html
@@ -639,11 +639,11 @@
                                        <form>
                                           <div class="form-group mb-20">
                                              <Label>KTS :</Label>
-                                             <input type="text" class="form-control" placeholder="">
+                                             <input type="text" class="form-control" placeholder="" id="kts">
                                           </div>
                                           <div class="button-group d-flex pt-25">
 
-                                             <button class="btn btn-primary btn-default btn-squared text-capitalize">Simpan
+                                             <button class="btn btn-primary btn-default btn-squared text-capitalize" id="buttoninsert">Simpan
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
