Insert Data Untuk Siklus Menu Siklus Admin

--- a/ami/siklus.html
+++ b/ami/siklus.html
@@ -637,7 +637,7 @@
                                        <form>
                                           <div class="form-group mb-20">
                                              <Label>Tahun :</Label>
-                                             <input type="text" class="form-control" placeholder="Tahun Siklus">
+                                             <input type="text" class="form-control" placeholder="Tahun Siklus" id="thn">
                                           </div>
                                           <div class="button-group d-flex pt-25">
 
@@ -660,9 +660,9 @@
 
                         <div class="userDatatable table global-shadow border-light-0 w-100">
                            <div class="table-responsive">
-                              <div class="table__header">
+                              <div class="adv-table-table__header">
                                  <h4>Data Siklus</h4>
-                                 <div class="-table__button">
+                                 <div class="adv-table-table__button">
                                     <div class="dropdown">
                                        <a class="btn btn-primary dropdown-toggle dm-select" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                           Export
