--- a/dashboard.html
+++ b/dashboard.html
@@ -1027,6 +1027,8 @@
    <script src="assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="assets/theme_assets/js/leaflet-init.js"></script>
    <script src="assets/theme_assets/js/main.js"></script>
+   <script src="./js/cihuy.js" type="module"></script>
+
    <!-- endinject-->
 </body>
 
