Modul Presensi : Coba Get All AMI

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -757,7 +757,7 @@
                                        </th>
                                     </tr>
                                  </thead>
-                                 <tbody>
+                                 <tbody id="tableBody">
                                     <tr>
                                        <td>
                                           <div class="userDatatable-content">30</div>
@@ -826,7 +826,6 @@
                                           </ul>
                                        </td>
                                     </tr>
-
                                  </tbody>
                               </table>
                            </div>
@@ -930,6 +929,7 @@
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
    <!-- endinject-->
+   <script src="ami.js" type="module"></script>
 </body>
 
 </html>
