--- a/ami/standar.html
+++ b/ami/standar.html
@@ -655,6 +655,16 @@
                                              </div>
                                              <textarea type="text" class="form-control" placeholder=""></textarea>
                                          </div>
+
+                                         <div class="form-group mb-20">
+                                          <div class="category-member">
+                                             <Label>Siklus :</Label>
+
+                                             <select class="js-example-basic-single js-states form-control" >
+                                                <option disabled value="JAN">--Pilih Siklus--</option>
+                                             </select>
+                                          </div>
+                                          </div>
                                          
                                           <div class="button-group d-flex pt-25">
 
