Pindahin file & direct link js kts dan siklus

--- a/ami/siklus.html
+++ b/ami/siklus.html
@@ -53,7 +53,7 @@
 
    <!-- Library GET Sidebar -->
    <script src="../js/cihuy.js" type="module"></script>   
-   <script src="../js/siklus.js" type="module"></script>
+   <script src="siklus.js" type="module"></script>
 
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
