Modul Presensi : Coba GET AMI

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -639,7 +639,7 @@
                                              <div class="category-member">
                                                 <Label>Fakultas :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" >
+                                                <select class="js-example-basic-single js-states form-control" id="ami">
                                                    <option disabled value="">--Pilih Fakultas--</option>
                                                 </select>
                                              </div>
@@ -648,7 +648,7 @@
                                              <div class="category-member">
                                                 <Label>Prodi :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" >
+                                                <select class="js-example-basic-single js-states form-control" id="ami">
                                                    <option disabled value="JAN">--Pilih Prodi--</option>
                                                 </select>
                                              </div>
@@ -657,7 +657,7 @@
                                              <div class="category-member">
                                                 <Label>Ketua Auditor :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" >
+                                                <select class="js-example-basic-single js-states form-control" id="ami">
                                                    <option disabled value="JAN">--Pilih Ketua Auditor--</option>
                                                 </select>
                                              </div>
@@ -666,7 +666,7 @@
                                              <div class="category-member">
                                                 <Label>Anggota Auditor 1 :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" >
+                                                <select class="js-example-basic-single js-states form-control" id="ami">
                                                    <option disabled value="JAN">--Pilih Anggota Auditor 1--</option>
                                                 </select>
                                              </div>
@@ -675,7 +675,7 @@
                                              <div class="category-member">
                                                 <Label>Anggota Auditor 2 :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" >
+                                                <select class="js-example-basic-single js-states form-control" id="ami">
                                                    <option disabled value="JAN">--Pilih Anggota Auditor 2--</option>
                                                 </select>
                                              </div>
@@ -683,7 +683,7 @@
                                           
                                           <div class="button-group d-flex pt-25">
 
-                                             <button class="btn btn-primary btn-default btn-squared text-capitalize">Simpan
+                                             <button class="btn btn-primary btn-default btn-squared text-capitalize" id="buttoninsert">Simpan
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
