get standar untuk menu admin

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -52,7 +52,8 @@
    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon.png">
 
    <!-- Library GET Sidebar -->
-   <script src="../js/cihuy.js" type="module"></script>   
+   <script src="../js/cihuy.js" type="module"></script> 
+   <script src="standar.js" type="module"></script>  
 
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -704,7 +705,7 @@
                                  </div>
                               </div>
                               <div id="filter-form-container"></div>
-                              <table class="table mb-0 table-borderless adv-table" data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
+                              <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
                                  <thead>
                                     <tr class="userDatatable-header">
                                        <th>
@@ -727,67 +728,9 @@
                                        </th>
                                     </tr>
                                  </thead>
-                                 <tbody id="tableBody">
+                                 <tbody id="content">
 
-                                    <tr>
-                                       <td>
-                                          <div class="userDatatable-content">30</div>
-                                       </td>
-                                       <td>
-                                          <div class="d-flex">
-                                             <div class="userDatatable-inline-title">
-                                                <a href="#" class="text-dark fw-500">
-                                                   <h6>Kapil Deb</h6>
-                                                </a>
-                                             </div>
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             India
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             Business Development
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             Manager
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content">
-                                             March 31, 2021
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <div class="userDatatable-content d-inline-block">
-                                             <span class="bg-opacity-success  color-success rounded-pill userDatatable-content-status active">active</span>
-                                          </div>
-                                       </td>
-                                       <td>
-                                          <ul class="orderDatatable_actions mb-0 d-flex flex-wrap">
-                                             <li>
-                                                <a href="#" class="view">
-                                                   <i class="uil uil-eye"></i>
-                                                </a>
-                                             </li>
-                                             <li>
-                                                <a href="#" class="edit">
-                                                   <i class="uil uil-edit"></i>
-                                                </a>
-                                             </li>
-                                             <li>
-                                                <a href="#" class="remove">
-                                                   <i class="uil uil-trash-alt"></i>
-                                                </a>
-                                             </li>
-                                          </ul>
-                                       </td>
-                                    </tr>
-
+                                    
                                  </tbody>
                               </table>
                            </div>
