--- a/ami/ami.html
+++ b/ami/ami.html
@@ -52,7 +52,7 @@
 
    <!-- Library GET Sidebar -->
    <script src="../js/cihuy.js" type="module"></script>   
-
+   <script src="ami.js" type="module"></script>
    <!-- Fonts -->
    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 
@@ -757,7 +757,7 @@
                                        </th>
                                     </tr>
                                  </thead>
-                                 <tbody id="tableBody">
+                                 <tbody id="content">
                                     <tr>
                                        <td>
                                           <div class="userDatatable-content">30</div>
