Modul Simpelbi : rapihin code users admin

--- a/users/users-admin.html
+++ b/users/users-admin.html
@@ -709,14 +709,8 @@
                                        </th>
                                     </tr>
                                  </thead>
-                                 <tbody id="tableBody">
-                                    <tr>
-                                       <td colspan="7">
-                                         <div class="spinner"></div>
-                                         <!-- <div id="agGrid" class="ag-theme-alpine" style="width: 100%; height: 400px;"></div> -->
-
-                                       </td>
-                                     </tr>
+                                 <tbody id="content">
+                                    
                                  </tbody>
                               </table>
                            </div>
