--- a/files/untuk_prodi.html
+++ b/files/untuk_prodi.html
@@ -684,7 +684,21 @@
                                  </div>
                               </div>
                               <div id="filter-form-container"></div>
-                              <table class="table mb-0 table-borderless adv-table" data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
+
+                              <div id="table-gridjs"></div>
+                              <script>
+                                 new gridjs.Grid({
+                                   columns: ["Name", "Email", "Phone Number"],
+                                   data: [
+                                     ["John", "john@example.com", "(353) 01 222 3333"],
+                                     ["Mark", "mark@gmail.com", "(01) 22 888 4444"],
+                                     ["Eoin", "eoin@gmail.com", "0097 22 654 00033"],
+                                     ["Sarah", "sarahcdd@gmail.com", "+322 876 1233"],
+                                     ["Afshin", "afshin@mail.com", "(353) 22 87 8356"]
+                                   ]
+                                 }).render(document.getElementById("table-gridjs"));
+                             </script>
+                              <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
                                  <thead>
                                     <tr class="userDatatable-header">
                                        <th>
@@ -774,6 +788,8 @@
    <div class="customizer-overlay"></div>
    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script>
    <!-- inject:js-->
+   <script src="https://unpkg.com/gridjs/dist/gridjs.production.min.js"></script>
+   <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
    <script src="../assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
    <script src="../assets/vendor_assets/js/jquery/jquery-ui.js"></script>
    <script src="../assets/vendor_assets/js/bootstrap/popper.js"></script>
