Postdata AMI DONE

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -639,11 +639,11 @@
                                        <form>
                                           <div class="form-group mb-20">
                                              <Label>Standar :</Label>
-                                             <input type="text" class="form-control" placeholder="Nama Standar">
+                                             <input type="text" class="form-control" placeholder="Nama Standar" id="standar">
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label>Untuk Pilihan :</Label>
-                                             <input type="text" class="form-control" placeholder="Text Singkat mewakili isi standar">
+                                             <input type="text" class="form-control" placeholder="Text Singkat mewakili isi standar" id="utkpilihan">
                                           </div>
                                           <div class="form-group mb-20">
                                              <label>Isi:</label>
@@ -654,7 +654,7 @@
                                                  <button class="note-toolbar-button" id="url">URL</button>
 
                                              </div>
-                                             <textarea type="text" class="form-control" placeholder=""></textarea>
+                                             <textarea type="text" class="form-control" placeholder="" id="isi"></textarea>
                                          </div>
 
                                          <div class="form-group mb-20">
@@ -669,7 +669,7 @@
                                          
                                           <div class="button-group d-flex pt-25">
 
-                                             <button class="btn btn-primary btn-default btn-squared text-capitalize">Simpan
+                                             <button class="btn btn-primary btn-default btn-squared text-capitalize" id="buttonadd">Simpan
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
