change template + users audit fakultas prodi

--- a/users/users-auditor.html
+++ b/users/users-auditor.html
@@ -744,20 +744,18 @@
                                           <span class="userDatatable-title">No Telepon</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">email</span>
+                                          <span class="userDatatable-title">Email</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">foto</span>
+                                          <span class="userDatatable-title">Foto</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title float-end">action</span>
+                                          <span class="userDatatable-title float-end">Action</span>
                                        </th>
                                     </tr>
                                  </thead>
-                                 <tbody id="tableBody">
-
+                                 <tbody id="content">
                                     
-
                                  </tbody>
                               </table>
                            </div>
