--- a/users/users-prodi.html
+++ b/users/users-prodi.html
@@ -760,10 +760,8 @@
                                        </th>
                                     </tr>
                                  </thead>
-                                 <tbody id="tableBody">
-
-                                    
-
+                                 <tbody id="content">
+                                    <!-- Isi Data Tabel -->
                                  </tbody>
                               </table>
                            </div>
