--- a/files/untuk_auditor.html
+++ b/files/untuk_auditor.html
@@ -633,20 +633,25 @@
                                  </div>
                                  <div class="modal-body">
                                     <div class="new-member-modal">
-                                       <form>
+                                       <form id="myForm">
+                                          <div class="form-group mb-20">
+                                             <label for="siklus">Siklus:</label>
+                                             <select id="siklus" class="form-control" name="idSiklus" placeholder="Siklus">
+                                             </select>
+                                         </div>
                                           <div class="form-group mb-20">
                                              <Label>Judul File :</Label>
-                                             <input type="text" class="form-control" placeholder="Judul File">
+                                             <input type="text" class="form-control" id="judul" placeholder="Judul File">
 
                                           </div>
                                           <div class="form-group mb-20">
                                              <Label>Masukkan file  :</Label>
-                                             <input type="file" class="form-control" placeholder="Judul File">
+                                             <input type="file" class="form-control"id="file"  placeholder="Judul File">
 
                                           </div>
                                           <div class="button-group d-flex pt-25">
 
-                                             <button class="btn btn-primary btn-default btn-squared text-capitalize">Simpan
+                                             <button type="button" id="tambahDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Simpan
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
@@ -682,7 +687,7 @@
                                  </div>
                               </div>
                               <div id="filter-form-container"></div>
-                              <table class="table mb-0 table-borderless adv-table" data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
+                              <table class="table mb-0 table-borderless " data-sorting="true" data-filter-container="#filter-form-container" data-paging-current="1" data-paging-position="right" data-paging-size="10">
                                  <thead>
                                     <tr class="userDatatable-header">
                                        <th>
