--- a/files/untuk_prodi.html
+++ b/files/untuk_prodi.html
@@ -635,20 +635,27 @@
                                  </div>
                                  <div class="modal-body">
                                     <div class="new-member-modal">
-                                       <form>
+                                       <form id="myForm">
+                                          <div class="form-group mb-20">
+                                             <label for="siklus">Siklus:</label>
+                                             <select id="siklus" class="form-control" name="idSiklus" placeholder="Siklus">
+                                             </select>
+                                         </div>
                                           <div class="form-group mb-20">
                                              <Label>Judul File :</Label>
-                                             <input type="text" class="form-control" placeholder="Judul File">
+                                             <input type="text" class="form-control" id="judul"placeholder="Judul File">
 
                                           </div>
+                                          
                                           <div class="form-group mb-20">
-                                             <Label>Masukkan file  :</Label>
-                                             <input type="file" class="form-control" placeholder="Judul File">
+                                             <Label>Masukkan File  :</Label>
+                                             <input type="file" class="form-control" id="file"placeholder="Judul File">
 
                                           </div>
+                                           
                                           <div class="button-group d-flex pt-25">
 
-                                             <button class="btn btn-primary btn-default btn-squared text-capitalize">add new project
+                                             <button type="button" id="tambahDataButton" class="btn btn-primary btn-default btn-squared text-capitalize">Tambah Data
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">cancel</button>
