--- a/files/untuk_prodi.html
+++ b/files/untuk_prodi.html
@@ -783,6 +783,8 @@
    <div class="customizer-overlay"></div>
    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBgYKHZB_QKKLWfIRaYPCadza3nhTAbv7c"></script>
    <!-- inject:js-->
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
    <script src="https://unpkg.com/gridjs/dist/gridjs.production.min.js"></script>
    <link href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css" rel="stylesheet" />
    <script src="../assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
