Modul Simpelbi : Coba Post Standar

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -661,7 +661,7 @@
                                           <div class="category-member">
                                              <Label>Siklus :</Label>
 
-                                             <select class="js-example-basic-single js-states form-control" >
+                                             <select class="js-example-basic-single js-states form-control" id="siklus">
                                                 <option disabled value="JAN">--Pilih Siklus--</option>
                                              </select>
                                           </div>
@@ -833,6 +833,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
    <!-- endinject-->
 </body>
 
