Modul Presensi : Coba Post Standar lagi

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -636,7 +636,7 @@
                                  </div>
                                  <div class="modal-body">
                                     <div class="new-member-modal">
-                                       <form>
+                                       <form method="POST">
                                           <div class="form-group mb-20">
                                              <Label>Standar :</Label>
                                              <input type="text" class="form-control" placeholder="Nama Standar" id="standar">
@@ -669,7 +669,7 @@
                                          
                                           <div class="button-group d-flex pt-25">
 
-                                             <button class="btn btn-primary btn-default btn-squared text-capitalize" id="buttonadd">Simpan
+                                             <button type="button" class="btn btn-primary btn-default btn-squared text-capitalize" id="buttonadd">Simpan
                                              </button>
 
                                              <button type="button" class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light" data-bs-dismiss="modal">Kembali</button>
