Modul Simpelbi: Fix untuk post dan delete admin

--- a/users/users-admin.html
+++ b/users/users-admin.html
@@ -1060,6 +1060,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-theme-alpine.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="../assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
