Modul Simpelbi :  coba get data dropdown di AMI

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -639,7 +639,7 @@
                                              <div class="category-member">
                                                 <Label>Fakultas :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="ami">
+                                                <select class="js-example-basic-single js-states form-control" id="fakultas">
                                                    <option disabled value="">--Pilih Fakultas--</option>
                                                 </select>
                                              </div>
@@ -648,7 +648,7 @@
                                              <div class="category-member">
                                                 <Label>Prodi :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="ami">
+                                                <select class="js-example-basic-single js-states form-control" id="prodi">
                                                    <option disabled value="JAN">--Pilih Prodi--</option>
                                                 </select>
                                              </div>
@@ -657,7 +657,7 @@
                                              <div class="category-member">
                                                 <Label>Ketua Auditor :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="ami">
+                                                <select class="js-example-basic-single js-states form-control" id="auditor">
                                                    <option disabled value="JAN">--Pilih Ketua Auditor--</option>
                                                 </select>
                                              </div>
@@ -666,7 +666,7 @@
                                              <div class="category-member">
                                                 <Label>Anggota Auditor 1 :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="ami">
+                                                <select class="js-example-basic-single js-states form-control" id="auditor">
                                                    <option disabled value="JAN">--Pilih Anggota Auditor 1--</option>
                                                 </select>
                                              </div>
@@ -675,8 +675,17 @@
                                              <div class="category-member">
                                                 <Label>Anggota Auditor 2 :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="ami">
+                                                <select class="js-example-basic-single js-states form-control" id="auditor">
                                                    <option disabled value="JAN">--Pilih Anggota Auditor 2--</option>
+                                                </select>
+                                             </div>
+                                          </div>
+                                          <div class="form-group mb-20">
+                                             <div class="category-member">
+                                                <Label>Siklus :</Label>
+
+                                                <select class="js-example-basic-single js-states form-control" id="auditor">
+                                                   <option disabled value="JAN">--Pilih Siklus--</option>
                                                 </select>
                                              </div>
                                           </div>
