Modul Simpelbi : Coba POST Ami

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -634,7 +634,7 @@
                                  </div>
                                  <div class="modal-body">
                                     <div class="new-member-modal">
-                                       <form>
+                                       <form method="post" id="myForm">
                                           <div class="form-group mb-20">
                                              <div class="category-member">
                                                 <Label>Fakultas :</Label>
@@ -666,7 +666,7 @@
                                              <div class="category-member">
                                                 <Label>Anggota Auditor 1 :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="auditor">
+                                                <select class="js-example-basic-single js-states form-control" id="anggota1">
                                                    <option disabled value="JAN">--Pilih Anggota Auditor 1--</option>
                                                 </select>
                                              </div>
@@ -675,7 +675,7 @@
                                              <div class="category-member">
                                                 <Label>Anggota Auditor 2 :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="auditor">
+                                                <select class="js-example-basic-single js-states form-control" id="anggota2">
                                                    <option disabled value="JAN">--Pilih Anggota Auditor 2--</option>
                                                 </select>
                                              </div>
@@ -684,7 +684,7 @@
                                              <div class="category-member">
                                                 <Label>Siklus :</Label>
 
-                                                <select class="js-example-basic-single js-states form-control" id="auditor">
+                                                <select class="js-example-basic-single js-states form-control" id="siklus">
                                                    <option disabled value="JAN">--Pilih Siklus--</option>
                                                 </select>
                                              </div>
