Modul Simpelbi : Fix Delete KTS

--- a/ami/siklus.html
+++ b/ami/siklus.html
@@ -794,6 +794,7 @@
    <script src="../assets/theme_assets/js/jvectormap-init.js"></script>
    <script src="../assets/theme_assets/js/leaflet-init.js"></script>
    <script src="../assets/theme_assets/js/main.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    <!-- endinject-->
 </body>
 
