--- a/users/users-prodi.html
+++ b/users/users-prodi.html
@@ -750,7 +750,10 @@
                                           <span class="userDatatable-title">NIDN</span>
                                        </th>
                                        <th data-type="html" data-name='status'>
-                                          <span class="userDatatable-title">Nik</span>
+                                          <span class="userDatatable-title">foto</span>
+                                       </th>
+                                       <th data-type="html" data-name='status'>
+                                          <span class="userDatatable-title">no telepon</span>
                                        </th>
                                        <th data-type="html" data-name='status'>
                                           <span class="userDatatable-title">Email</span>
